--- a/accounts/templates/accounts/password_reset_change.html
+++ b/accounts/templates/accounts/password_reset_change.html
@@ -1,21 +1,29 @@
-{% extends 'base2.html' %}
+{% extends 'base.html' %}
 {% block head_title %} Set New Password {% endblock %}
 {% load crispy_forms_tags %}
 
 
 
 {% block content %}
-<div class="content-section mt-5">
-    <form method="POST" enctype="multipart/form-data">
-        <fieldset class="form-group">
-            <legend class="">Set Password</legend>
-            {% csrf_token %}
-            {{ form | crispy }}
-        </fieldset>
-        <div class="form-group pt-2 pb-2">
-            <input type="submit" value="Set Password" class="btn btn-outline-info">
+
+
+
+    <main class="container">
+        <div class="row justify-content-center add-budget-margin" style="margin-top:4rem;">
+            <div class="card col-md-6">
+                <form method="POST" enctype="multipart/form-data">
+                    <fieldset class="form-group">
+                        <legend class="mt-3">Set Password</legend>
+                        {% csrf_token %}
+                        {{ form | crispy }}
+                    </fieldset>
+                    <div class="form-group pt-2 pb-2">
+                        <input type="submit" value="Set Password" class="btn btn-outline-info">
+                    </div>
+                </form>
+            </div>
         </div>
-    </form>
+    </main>
 </div>
 {% endblock content %}
 
