--- a/accounts/templates/accounts/password_reset_done.html
+++ b/accounts/templates/accounts/password_reset_done.html
@@ -1,10 +1,14 @@
-{% extends 'base2.html' %}
+{% extends 'base.html' %}
 {% block head_title %} Password Reset Completed {% endblock %}
 
 
 
 {% block content %}
-    <div class="alert alert-info">
-        Your password has been reset, you can now <a href="{% url 'account-login' %}">Login to your Account</a>
-    </div>
+    <main class="container">
+        <div class="row justify-content-center add-budget-margin" style="margin-top:7rem;">
+            <div class="col-md-6">
+                <h4>Your password has been reset, you can now</h4><a href="{% url 'account-login' %}">Login to your Account</a>
+            </div>
+        </div>
+    </main>
 {% endblock content %}
