--- a/budget/templates/budget/transaction_form.html
+++ b/budget/templates/budget/transaction_form.html
@@ -6,20 +6,21 @@
 {% block content %}
     <main class="container">
         <div class="row justify-content-center mt-5">
-            <div class="col-md-6">
-            <h2>Create an expense</h2>
+            <div class="card col-md-6">
+                <h2 class="text-center mt-3 mb-0">Create an expense</h2>
                 <form action="" method="POST">
                     {% csrf_token %}
                     {{ transaction_form|crispy }}
-                    <div class="row">
-                    <div class="col-md-6">
-                        <button type="submit" class="btn btn-danger mt-3 w-100">Create Transaction</button>
-                    </div>
-                    <div class="col-md-6">
-                        <a href="{% url 'budget_list' %}" class="btn btn-secondary mt-3 w-100">Cancel Transaction</a>
-                    </div>
+                    <div class="row ">
+                        <div class="col-md-6">
+                            <button type="submit" class="btn btn-danger mt-3 w-100">Create Transaction</button>
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <a href="{% url 'budget_list' %}" class="btn btn-secondary mt-3 w-100">Cancel Transaction</a>
+                        </div>
                     </div>
                 </form>
+            </div>
             </div>
         </div>
     </main>
