--- a/accounts/templates/accounts/password_reset_sent.html
+++ b/accounts/templates/accounts/password_reset_sent.html
@@ -1,10 +1,16 @@
-{% extends 'base2.html' %}
+{% extends 'base.html' %}
 {% block head_title %} Password Reset Sent {% endblock %}
 
 
 
 {% block content %}
-    <div class="alert alert-info">
-        An email has been sent with insructions to reset your password.
-    </div>
+    <main class="container">
+        <div class="row justify-content-center add-budget-margin" style="margin-top:7rem;">
+            <div class="col-md-6">
+                <div class="">
+                    <h3>An email has been sent with insructions to reset your password.</h3>
+                </div>
+            </div>
+        </div>
+    </main>
 {% endblock content %}
