--- a/accounts/templates/accounts/reset_password.html
+++ b/accounts/templates/accounts/reset_password.html
@@ -1,22 +1,26 @@
-{% extends 'base2.html' %}
+{% extends 'base.html' %}
 {% block head_title %} Password Reset Request {% endblock %}
 {% load crispy_forms_tags %}
 
 
 
 {% block content %}
-<div class="content-section mt-5">
-    <form method="POST" enctype="multipart/form-data">
-        <fieldset class="form-group">
-            <legend class="">Reset Password</legend>
-            {% csrf_token %}
-            {{ form|crispy }}
-        </fieldset>
-        <div class="form-group pt-2 pb-2">
-            <input type="submit" value="Request Password Reset" class="btn btn-outline-info">
+    <main class="container">
+        <div class="row justify-content-center add-budget-margin" style="margin-top:7rem;">
+            <div class="card col-md-6">
+                <form method="POST" enctype="multipart/form-data">
+                    <fieldset class="form-group">
+                        <legend class="mt-3">Reset Password</legend>
+                        {% csrf_token %}
+                        {{ form|crispy }}
+                    </fieldset>
+                    <div class="mb-3 mt-3">
+                        <input type="submit" value="Request Password Reset" class="btn btn-outline-info">
+                    </div>
+                </form>
+            </div>
         </div>
-    </form>
-</div>
+    </main>
 {% endblock content %}
 
 
