--- a/budget/templates/budget/budget_form.html
+++ b/budget/templates/budget/budget_form.html
@@ -3,18 +3,20 @@
 
 
 {% block content %}
-     <main class="container">
-        <div class="row justify-content-center mt-5">
-            <div class="col-md-6">
-            <h2>Create an expense</h2>
+    <main class="container">
+        <div class="row justify-content-center add-budget-margin" style="margin-top:5rem;">
+            <div class="col-md-6 card">
+                <h2 class="mt-3">Create Budget</h2>
                 <form action="" method="POST">
                     {% csrf_token %}
                     {{ budget_form|crispy }}
-                    <div class="col">
-                        <button type="submit" class="btn btn-danger mt-3 w-50">Submit</button>
-                    </div>
-                    <div class="col">
-                        <a href="{% url 'budget_list' %}" class="btn btn-primary">Back to Home</a>
+                    <div class="row justify-content-center ml-5">
+                        <div class="col">
+                            <button type="submit" class="btn btn-danger mt-2 mb-2 w-100">Submit</button>
+                        </div>
+                        <div class="col">
+                            <a href="{% url 'budget_list' %}" class="btn btn-primary mt-2 mb-2 w-100">Cancel</a>
+                        </div>
                     </div>
                 </form>
             </div>
