--- a/budget/templates/budget/budget_list.html
+++ b/budget/templates/budget/budget_list.html
@@ -4,55 +4,63 @@
 
 {% block content %}
      {% if budgets %}
-    <main class="row justify-content-center">
-        <div class="card text-center text-black mb-3 col-md-6">
-            <div class="card-header">
-                <h5 class="card-title">Add Budget</h5>
+    <main role="main" class="container">
+       <div class="row justify-content-center">
+            <div class="col-md-7 add-budget-margin">
+                <div class="card text-center text-black mb-3">
+                    <div class="card-header">
+                        <h5 class="card-title">Add Budget</h5>
+                    </div>
+                    <p>Click the button below to add budget(s)</p>
+                    <div class="mb-2">
+                        <a href="{% url 'create_budget' %}" class="btn btn-warning w-50">Add Budget</a>
+                    </div>
+                </div>
             </div>
-            <p>Click the button below to add budget(s)</p>
-            <div class="mb-2">
-                <a href="{% url 'create_budget' %}" class="btn btn-warning w-50">Add Budget</a>
-            </div>
-        </div>
+       </div>
     </main>
-    <h1>My Budgets</h1>
     <hr>
-   
-        {% for budget in budgets %}
-            <div class="row" style="margin-left:20px;">
-                <div class="col-md-3" style="float:right;">
-                    <div class="card text-center text-black mb-3">
-                        <div class="card-header">
-                            <h5 class="card-title">{{budget.budget_name}}</h5>
+    <h1 class="text-center">My Budgets</h1>
+        <div class="row justify-content-center content-margin">
+            {% for budget in budgets %}
+            <div class="col-md-4">
+                <div class="card text-center text-black mb-3">
+                    <div class="card-header">
+                        <h5 class="card-title">{{budget.budget_name}}</h5>
+                    </div>
+                    <p>{{ budget.budget_name }} : ₦{{budget.amount}}</p>
+                    <a href="{% url 'budget_detail' budget.pk %}" style="color:orange;">View Details</a>
+                    <div class="row justify-content-center mb-3">
+                        <div class="col-md-6 mt-2">
+                            <a href="{% url 'update_budget' budget.pk %}" class="btn btn-warning">Update Budget</a>
                         </div>
-                        <p>{{ budget.budget_name }} <a href="{% url 'budget_detail' budget.pk %}">View Details</a></p>
-                        <div class="row justify-content-center mb-3">
-                            <div class="col-md-6" style="margin-left:none">
-                                <a href="{% url 'update_budget' budget.pk %}" class="btn btn-warning">Update Budget</a>
-                            </div>
 
-                            <div class="col-md-6" style="margin-left:-25px">
-                                <a href="{% url 'delete_budget' budget.pk %}" class="btn btn-danger">Delete Budget</a>
-                            </div>
+                        <div class="col-md-6 mt-2">
+                            <a href="{% url 'delete_budget' budget.pk %}" class="btn btn-danger">Delete Budget</a>
                         </div>
                     </div>
                 </div>
             </div>
-        {% endfor %}
+            {% endfor %}
+        </div>
     {% else %}
-    <main class="row justify-contetn-center" style="margin:60px 0px 0px 340px;">
-        <div class="col-md-8">
-            <div class="card text-center text-black mb-3">
-                <div class="card-header">
-                    <h5 class="card-title">Add Budget</h5>
+    <main class="container mb-5" style="margin-top: 6rem;">
+        <div class="row justify-content-center add-budget-margin">
+            <div class="col-md-6 card">
+                <div class="text-center text-black mb-5">
+                    <div class="card-header">
+                        <h5 class="card-title">Add Budget</h5>
+                    </div>
+                    <p>You do not have any budget yet on your profile, please create one.</p>
+                    <div class="mb-2">
+                        <a href="{% url 'create_budget' %}" class="btn btn-warning w-50">Add Budget</a>
+                    </div>
                 </div>
-                <p>You do not have any budget yet on your profile, please create one.</p>
-                <div class="mb-2">
-                    <a href="{% url 'create_budget' %}" class="btn btn-warning w-50">Add Budget</a>
-                </div>
-            </div>
-        </div>  
+            </div>  
+        </div>
     </main>
+
+    
     {% endif %}
 {% endblock content %}
 
