--- a/static/css/budget.css
+++ b/static/css/budget.css
@@ -1,5 +1,47 @@
 body{
-    background:cadetblue;
+    background: chocolate;
+    margin:0px auto;
+}
+
+/* social media icon style*/
+.social-icon .fab{
+    font-size: 40px;
+    margin: 0px 10px;
+}
+
+.social-icon .fa-twitter{
+    color:rgba(0, 0, 255, 0.582);
+}
+
+.social-icon .fa-github-alt{
+    color:rgb(0, 0, 0);
+}
+
+.social-icon .fa-twitter:hover{
+    color:rgb(0, 0, 255);
+}
+
+.social-icon .fa-github-alt:hover{
+    color:rgba(0, 0, 0, 0.856);
+}
+
+.social-icon .fa-linkedin-in:hover{
+    color:rgba(0, 0, 255, 0.644);
+}
+
+/* budgets content style*/
+.content-margin{
+    margin:10px 0px 10px 0px !important;
+}
+
+.add-budget-margin{
+    margin-left:0px;
+}
+@media only screen and (max-width:763px) {
+    .add-budget-margin{
+        margin-left: 16px;
+        margin-right: 10px;
+    }
 }
 
 
@@ -16,10 +58,22 @@ body{
     align-self: center;
 }
 
+/* about page style */
 .developer-image{
+    width: 100%;
+    height: auto;
     max-width: 350px;
     max-height: 400px;
-    border-radius: 50px; 
+    border-radius: 30px; 
+}
+
+@media only screen and (max-width:767px){
+    .developer-image{
+        margin-bottom: 20px;
+        max-width: 350px;
+        max-height: 400px;
+        align-self: center;
+    }
 }
 
 .trans-form{
@@ -29,4 +83,17 @@ body{
     margin-top: 15px;
     text-align: center;
     padding: 5px 0px 5px 0px;
+}
+
+
+/* links styling */
+a{
+    color: blue;
+}
+a:hover{
+    color: burlywood;
+}
+.text-muted,small{
+    color: black !important;
+    text-align: center;
 }
