--- a/templates/base2.html
+++ b/templates/base2.html
@@ -72,10 +72,10 @@
 
 
         {% block content %} {% endblock %}
-            <div class="container fixed-bottom">
+            <div class="container" style="margin-top: -4.5rem">
                 <div class="row justify-content-center text-center">
-                    <legend class="border-bottom mt-3"></legend>
-                    <div class="col-md-12 mb-1 social-icon">
+                    <legend class="border-bottom"></legend>
+                    <div class="col-md-12 social-icon">
                         <a href="https://twitter.com/yungelda"><i class="fab fa-twitter"></i></a>
                         <a href="https://github.com/aayobam"><i class="fab fa-github-alt"></i></a>
                         <a href="https://linkedin.com/in/aayobam"><i class="fab fa-linkedin-in"></i></a>
