--- a/budget/templates/budget/transaction_form.html
+++ b/budget/templates/budget/transaction_form.html
@@ -1,11 +1,11 @@
-{% extends 'base.html' %}
+{% extends 'base2.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
 
 
 {% block content %}
     <main class="container">
-        <div class="row justify-content-center mt-5">
+        <div class="row justify-content-center mt-5" style="margin-bottom:5rem;">
             <div class="card col-md-6">
                 <h2 class="text-center mt-3 mb-0">Create an expense</h2>
                 <form action="" method="POST">
