--- a/templates/base2.html
+++ b/templates/base2.html
@@ -72,7 +72,7 @@
 
 
         {% block content %} {% endblock %}
-            <div class="container" style="margin-top: -4.5rem">
+            <main class="container" style="margin-top: -4.5rem">
                 <div class="row justify-content-center text-center">
                     <legend class="border-bottom"></legend>
                     <div class="col-md-12 social-icon">
@@ -84,7 +84,7 @@
                         <p>Webapp Developed by Olowu Abayomi | Money Tracker Inc. &copy 2021</p>
                     </div>
                 </div>
-            </div>
+            </main>
         
         <script src="{% static 'bootstrap5/js/bootstrap.min.js' %}"></script>
     </body>
