--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
                     {% if user.is_authenticated %}
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
                             <ul class="navbar-nav">
-                                <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'budget_list' %}">User Dashboard</a></li>
+                                <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'budget_list' %}">Dashboard</a></li>
                             </ul>
                         </div>
                         <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
